--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mission -2022</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <section class="main-section">
+      <div class="two-column stay-column">
+        <div class="stay-focused">
+          <h1>Stay Focused on <span>Mission 2022</span></h1>
+        </div>
+        <p>
+          Just as the train does not stop until it reaches its station, I will
+          not stop until we succeed in our web development mission. So my main
+          mission in 2022 is to become an anonymous web developer.
+        </p>
+        <a href="#" target="black">Explore Now</a>
+        <p class="Scroll">Scroll down to explore more about us</p>
+      </div>
+      <div class="two-column">
+        <img src="images/person/person-0.png" alt="image" />
+      </div>
+    </section>
+  </body>
 </html>
