--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     />
   </head>
   <body>
-    <section class="main-section">
+    <section class="main-container">
       <div class="two-column stay-column">
         <div class="stay-focused">
-          <h1>Stay Focused on <span>Mission 2022</span></h1>
+          <h1>Stay Focused on <span id="main-color">Mission 2022</span></h1>
         </div>
         <p>
           Just as the train does not stop until it reaches its station, I will
@@ -31,5 +31,71 @@
         <img src="images/person/person-0.png" alt="image" />
       </div>
     </section>
+    <section>
+      <h1 class="main-mission">My Mission in <span>2022</span></h1>
+      <div class="main-container">
+        <div class="three-column mission-color">
+          <img src="images/illustrators/illustrator-1.png" alt="image" />
+          <h2>Mission</h2>
+          <p>
+            My main goal is to become a web developer. I am ready if I have to
+            work hard to make this mission a success
+          </p>
+        </div>
+        <div class="three-column vission-color">
+          <img src="images/illustrators/illustrator-2.png" alt="image" />
+          <h2>Vission</h2>
+          <p>
+            I see in my vission that if you work hard, you will be able to work
+            harder and harder. So if I work hard, I will win.
+          </p>
+        </div>
+        <div class="three-column goals-color">
+          <img src="images/illustrators//illustrator-3.png" alt="image" />
+          <h2>Goals</h2>
+          <p>
+            I see in my vission that if you work hard, you will be able to work
+            harder and harder. So if I work hard, I will win.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="main-container space-top">
+      <div class="develop-img-area">
+        <img src="images/pictures/coding.png" alt="image" />
+      </div>
+      <div class="develop-text-area develop-limits">
+        <h1>
+          Develop <br />
+          Without Limits
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim deterruisset
+          eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert
+          gubergren dissentias et cum.
+        </p>
+        <a href="#">Read the Documentation</a>
+      </div>
+    </section>
+    <section class="main-container space-top">
+      <div class="develop-text-area global-community">
+        <h1>
+          Know our <br />
+          Global Community
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim deterruisset
+          eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert
+          gubergren dissentias et cum.
+        </p>
+        <a href="#">Read the Documentation</a>
+      </div>
+      <div class="develop-img-area">
+        <img src="images/pictures/project.png" alt="image" />
+      </div>
+    </section>
+    <section class="main-container space-top"></section>
   </body>
 </html>
