--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <p>
           Just as the train does not stop until it reaches its station, I will
           not stop until we succeed in our web development mission. So my main
-          mission in 2022 is to become an anonymous web developer.
+          mission in 2022 is to become a Successful web developer.
         </p>
-        <a href="#" target="black">Explore Now</a>
+        <a href="https://www.linkedin.com/" target="black">Explore Now</a>
         <p class="Scroll">Scroll down to explore more about us</p>
       </div>
       <div class="two-column">
-        <img src="images/person/person-0.png" alt="image" />
+        <img src="images/person/dip (2).png" alt="image" />
       </div>
     </section>
     <section>
@@ -38,29 +38,29 @@
           <img src="images/illustrators/illustrator-1.png" alt="image" />
           <h2>Mission</h2>
           <p>
-            My main goal is to become a web developer. I am ready if I have to
-            work hard to make this mission a success
+            My main mission is to become a web developer. I am ready if I have
+            to work hard to make this mission a success.
           </p>
         </div>
         <div class="three-column vission-color">
           <img src="images/illustrators/illustrator-2.png" alt="image" />
           <h2>Vission</h2>
           <p>
-            I see in my vission that if you work hard, you will be able to work
-            harder and harder. So if I work hard, I will win.
+            I see in my vision that if you work hard you will be able to work
+            harder. So only by working hard can I reach my desired goal.
           </p>
         </div>
         <div class="three-column goals-color">
           <img src="images/illustrators//illustrator-3.png" alt="image" />
           <h2>Goals</h2>
           <p>
-            I see in my vission that if you work hard, you will be able to work
-            harder and harder. So if I work hard, I will win.
+            My main goal is to become a web developer. I have chosen 2022 as my
+            main goal. So I will stick to my goal.
           </p>
         </div>
       </div>
     </section>
-    <section class="main-container space-top">
+    <section class="main-container">
       <div class="develop-img-area">
         <img src="images/pictures/coding.png" alt="image" />
       </div>
@@ -70,25 +70,25 @@
           Without Limits
         </h1>
         <p>
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli deterruisset. No duo populo animal noluisse, enim deterruisset
-          eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert
-          gubergren dissentias et cum.
+          I think there is no limit to what can be made. It takes a lot of
+          experience to create something. By utilizing this kind of approach, we
+          can improve our application. So there are no restrictions for creating
+          good quality applications.
         </p>
         <a href="#">Read the Documentation</a>
       </div>
     </section>
-    <section class="main-container space-top">
+    <section class="main-container">
       <div class="develop-text-area global-community">
         <h1>
           Know our <br />
           Global Community
         </h1>
         <p>
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli deterruisset. No duo populo animal noluisse, enim deterruisset
-          eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert
-          gubergren dissentias et cum.
+          We know that our main order is to establish relations with the
+          committees around the world. So the whole world works as our family.
+          So we try to make everyone work together. In this case, the importance
+          of our world community.
         </p>
         <a href="#">Read the Documentation</a>
       </div>
@@ -96,6 +96,23 @@
         <img src="images/pictures/project.png" alt="image" />
       </div>
     </section>
-    <section class="main-container space-top"></section>
+    <section class="main-container">
+      <div class="two-column developer-portfolio">
+        <h1>I'm <span id="main-color">Dipok</span> Roy</h1>
+        <p>
+          I want to be a web developer. I started my web developer mission in
+          2022. So I want to reach my desired goal. I am ready to do my best to
+          become a web developer.
+        </p>
+        <a href="#">LEARN MORE</a>
+      </div>
+      <div class="two-column">
+        <img src="images/person/dip (2).png" alt="image" />
+      </div>
+    </section>
+    <footer class="footer-area">
+      <h1>Mission <span id="main-color">2022</span></h1>
+      <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
   </body>
 </html>
